# Projekt

./: .gitignore  README.md
doc/: Zadania.txt
prj/src/logistic_system/: CMakeLists.txt  package.xml
prj/src/logistic_system/doc/: Doxyfile.in
prj/src/logistic_system/include/data/: RobotManagerData.hpp  TaskThread.hpp  UpdateRobotDataThread.hpp  dane_magazynowe.hpp  garaz.hpp  magazyn.hpp  robot.hpp  zadanie.hpp
prj/src/logistic_system/include/gui/: AboutRobotManagerDialog.hpp  AddGarageDialog.hpp  AddRobotDialog.hpp  AddStorageDialog.hpp  AddTaskDialog.hpp  DataManager.hpp  GarageInfoWidget.hpp  LogisticSystemMainWindow.hpp  MapWidget.hpp  RobotInfoWidget.hpp  RobotManagerDataObject.hpp  StorageInfoWidget.hpp  TaskInfoWidget.hpp
prj/src/logistic_system/include/models/: DobierzRobota.hpp  GarageModel.hpp  RobotModel.hpp  StorageModel.hpp  TaskModel.hpp  ZadanieModel.hpp
prj/src/logistic_system/msg/: README
prj/src/logistic_system/python/: drive.py  drive2.py  gripperoff.py  gripperon.py  jedz_do.py  kalibruj.py  reset.py  zapisz_pozycje_robota.py
prj/src/logistic_system/rsrc/: rsrc.qrc
prj/src/logistic_system/src/: AddTaskDialog.cpp  LogisticSystemMainWindow.cpp  MapWidget.cpp  StorageInfoWidget.cpp  TaskInfoWidget.cpp  robot_manager_main.cpp  robot_manager_main.cpp~
prj/src/logistic_system/srv/: README
prj/src/logistic_system/ui/: AboutRobotManagerDialog.ui  AddGarageDialog.ui  AddRobotDialog.ui  AddStorageDialog.ui  AddTaskDialog.ui  GarageInfoWidget.ui  LogisticSystemMainWindow.ui  RobotInfoWidget.ui  StorageInfoWidget.ui  TaskInfoWidget.ui
(+50 files in other folders)
